Add scripts to user reservations page
